--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "dependencies": {
     "@firebase/firestore": "^4.7.6",
     "@heroicons/react": "^2.2.0",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.5.0",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.6",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "next": "^14.2.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,6 +34,8 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/hpp": "^0.2.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
